tests/NormalTests/paczka1/small_fuzzy/52125720.err
Error in line 1: A813 S2 98,9
Error in line 2: A813 A813 2,2
